ft(supplier): Implements suppliers/hosts should create accommodation facility
- Create endpoint to post accommodation faciltiy and room
- Create endpoint to post room for a particular accommodation
- Create endpoint to get all accommodation facility posted by suppliers
- Create endpoint to get a particular accommodation facility and all
available rooms

[Finishes #167728045]
